--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,23 @@
-rethinkdb_backup:
-  build: .
-  environment:
-    - CRON_TIME=* * * * *
-    - RETHINKDB_ENV=DEVELOPMENT
-    - MAX_BACKUPS=20
-  links:
-    - rethinkdb-dev
-  volumes:
-    - /backups:/backups
-rethinkdb-dev:
-  image: 'rethinkdb:2.2.0'
-  command: 'rethinkdb --bind all'
-  ports:
-    - '28015:28015'
-    - '8080:8080'
-  restart: always
+version: '2'
+services:
+  rethinkdb_backup:
+    build:
+      context: .
+    environment:
+      - CRON_TIME=* * * * *
+      - RETHINKDB_ENV=DEVELOPMENT
+      - RETHINKDB_HOST=rethinkdb-dev
+      - RETHINKDB_PORT=28015
+      - MAX_BACKUPS=20
+      - INIT_RESTORE_LATEST=true
+    links:
+      - rethinkdb-dev
+    volumes:
+      - ./backups:/backups
+    depends_on:
+      - rethinkdb-dev
+  rethinkdb-dev:
+    image: 'rethinkdb:2.2.5'
+    ports:
+      - '28015:28015'
+      - '8080:8080'
